discussion/kv_engine/185684/185684_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54729: Enable history scan for CDC backfill

Replace the todo markers with code that now utilises the magma history
API - this now means scanAllVersions for example is hooked into the
magma history scanning API.

Add new tests that validate multiple versions can be stored and
returned.

Also required are changes to unit tests to respect new expectation
checks that occur in magma - primarily that flushing writes ordered
batches - this is only a problem for tests which bypass the flusher
and call KVStore directly.

Change-Id: I2f91ade0ee96eff0058c7fafacbc0aca7cda1b02

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2023-01-27 11:13:09.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2023-01-27 11:13:42.000000000
Message: 
Patch Set 1: Well-Formed+1

Permission granted to commit: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/334636/artifact/restricted.html : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-01-27 11:38:28.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/952/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1832:49: error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return scan(ctx, magma::Magma::SeqIterator::Mode::Snapshot);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1836:49: error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
    return scan(ctx, magma::Magma::SeqIterator::Mode::History);
                                                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1840:60: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                                magma::Magma::SeqIterator::Mode mode) const {
                                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:2899:18: error: no member named "RangeNotFound" in "magma::Status" [clang-diagnostic-error]
    case Status::RangeNotFound:
                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3736:20: error: redefinition of "setHistoryRetentionSeconds" [clang-diagnostic-error]
void MagmaKVStore::setHistoryRetentionSeconds(std::chrono::seconds seconds) {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:3732:20: note: previous definition is here
void MagmaKVStore::setHistoryRetentionSeconds(std::chrono::seconds seconds) {
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:793:50: error: no type named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
                      magma::Magma::SeqIterator::Mode mode) const;
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-memory-tracking-proxy.h:53:30: error: unknown type name "Mode" [clang-diagnostic-error]
                             Mode mode) override;
                             ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/952/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.cc:1832:49:
error: no member named "Mode" in "magma::Magma::SeqIterator" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/952/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1140/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-neo\kv_engine\engines\ep\src\kvstore/magma-kvstore/magma-kvstore.h(793): error C2039: "Mode": is not a member of "magma::Magma::SeqIterator" ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/1140/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/922/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:793:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/922/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1258/ : FAILURE

Compile error at [2023-01-27T11:22:04.142Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:793:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1258/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/965/ : FAILURE

Compile error at [2023-01-27T11:32:32.393Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:793:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/965/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/972/ : FAILURE

Compile error at [2023-01-27T11:37:55.569Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:793:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/972/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/962/ : FAILURE

Compile error at [2023-01-27T11:34:56.132Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:793:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/962/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/945/ : FAILURE

Compile error at [2023-01-27T11:33:14.566Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:793:50:
error: no type named "Mode" in "magma::Magma::SeqIterator"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/945/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/965/ : FAILURE

Compile error at [2023-01-27T11:19:12.103Z] ../kv_engine/engines/ep/src/kvstore/magma-kvstore/magma-kvstore.h:793:23:
error: ?magma::Magma::SeqIterator::Mode? has not been declared
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/965/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/22402/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/974/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
